test-bash & systemd files

--- a/ansible/02-variables.yml
+++ b/ansible/02-variables.yml
@@ -21,3 +21,7 @@
         msg: url - {{ url }}
       vars:
         url: tasks.example.com
+
+# Since the variable in the second example above is declared at task level, then only one task can access that variable
+
+# The same variable can be declared from command line using -e option
