--- a/ansible/02-variables.yml
+++ b/ansible/02-variables.yml
@@ -25,3 +25,25 @@
 # Since the variable in the second example above is declared at task level, then only one task can access that variable
 
 # The same variable can be declared from command line using -e option
+# Now the variable precedence will come into picture
+# 1. Command line level
+# 2. Task Level
+# 3. Play Level
+# 4. Error saying variable does not exist
+
+## Variable data types
+# 1. String
+# 2. Number
+# 3. Boolean (yes/no true/false)
+
+- name: Variable types
+  hosts: localhost
+  connection: local
+  vars:
+    x: abc
+    y: 100
+    z: true
+  tasks:
+    - name: Type of variables
+      ansible.builtin.debug:
+        msg: x - {{ x }}, y - {{ y }}, z - {{ z }}
