--- a/ansible/02-variables.yml
+++ b/ansible/02-variables.yml
@@ -54,8 +54,8 @@
 # 3. Map
 
 - name: Variable Declaration types
-  hosts:
-  connection:
+  hosts: localhost
+  connection: local
   vars:
     x: abc
     y:
