--- a/roboshop-ansible/roles/frontend/tasks/main.yml
+++ b/roboshop-ansible/roles/frontend/tasks/main.yml
@@ -1,3 +1,19 @@
-- name: Frontend Roles
-  ansible.builtin.debug:
-    msg: Frontend Role
+#- name: Frontend Roles
+#  ansible.builtin.debug:
+#    msg: Frontend Role
+
+#dnf module disable nginx -y
+#dnf module enable nginx:1.24 -y
+#dnf install nginx -y
+#rm -rf /usr/share/nginx/html/*
+#cp nginx.conf /etc/nginx/nginx.conf
+#systemctl restart nginx
+#systemctl enable nginx
+#systemctl start nginx
+#curl -o /tmp/frontend.zip https://roboshop-artifacts.s3.amazonaws.com/frontend-v3.zip
+#cd /usr/share/nginx/html
+#unzip /tmp/frontend.zip
+
+- name: Disable Default Nginx & Enable Nginx 1.24
+  ansible.builtin.shell: dnf module disable nginx -y; dnf module enable nginx:1.24 -y
+
