--- a/roboshop-ansible/roles/frontend/tasks/main.yml
+++ b/roboshop-ansible/roles/frontend/tasks/main.yml
@@ -1,6 +1,6 @@
-#- name: Frontend Roles
-#  ansible.builtin.debug:
-#    msg: Frontend Role
+- name: Check Nginx Version
+  ansible.builtin.debug:
+    msg: nginx --version
 
 #dnf module disable nginx -y
 #dnf module enable nginx:1.24 -y
@@ -14,6 +14,6 @@
 #cd /usr/share/nginx/html
 #unzip /tmp/frontend.zip
 
-- name: Disable Default Nginx & Enable Nginx 1.24
-  ansible.builtin.shell: dnf module disable nginx -y; dnf module enable nginx:1.24 -y
+#- name: Disable Default Nginx & Enable Nginx 1.24
+#  ansible.builtin.shell: dnf module disable nginx -y; dnf module enable nginx:1.24 -y
 
