--- a/roboshop-ansible/roles/frontend/tasks/main.yml
+++ b/roboshop-ansible/roles/frontend/tasks/main.yml
@@ -2,15 +2,6 @@
 #  ansible.builtin.debug:
 #    msg: nginx -v
 
-- name: Check nginx version
-  shell: nginx -v
-  register: nginx_version
-  ignore_errors: yes
-
-- name: Print nginx version
-  debug:
-    msg: "{{ nginx_version.stderr }}"
-
 #dnf module disable nginx -y
 #dnf module enable nginx:1.24 -y
 #dnf install nginx -y
@@ -23,6 +14,6 @@
 #cd /usr/share/nginx/html
 #unzip /tmp/frontend.zip
 
-#- name: Disable Default Nginx & Enable Nginx 1.24
-#  ansible.builtin.shell: dnf module disable nginx -y; dnf module enable nginx:1.24 -y
+- name: Disable Default Nginx & Enable Nginx 1.24
+  ansible.builtin.shell: dnf module disable nginx -y; dnf module enable nginx:1.24 -y
 
