--- a/roboshop-ansible/roles/mongodb/tasks/main.yml
+++ b/roboshop-ansible/roles/mongodb/tasks/main.yml
@@ -17,7 +17,7 @@
 - name: Start MongoDB Service
   ansible.builtin.systemd_service:
     name: mongod
-    stated: started
+    state: started
     enabled: yes
 
 
