--- a/roboshop-ansible/roles/redis/tasks/main.yml
+++ b/roboshop-ansible/roles/redis/tasks/main.yml
@@ -8,18 +8,18 @@
 
 - name: Update Redis Config - Listen Address
   ansible.builtin.replace:
-  path: /etc/redis/redis.conf
-  regexp: '127.0.0.1'
-  replace: '0.0.0.0'
+   path: /etc/redis/redis.conf
+   regexp: '127.0.0.1'
+   replace: '0.0.0.0'
 
 - name: Update Redis Config - Protected Mode
   ansible.builtin.replace:
-  path: /etc/redis/redis.conf
-  regexp: 'protected-mode yes'
-  replace: 'protected-mode no'
+   path: /etc/redis/redis.conf
+   regexp: 'protected-mode yes'
+   replace: 'protected-mode no'
 
 - name: Start Redis Service
   ansible.builtin.systemd_service:
-   name: mongod
+   name: redis
    state: started
    enabled: yes
