test-bash & systemd files

--- a/roboshop-ansible/roles/mysql/tasks/main.yml
+++ b/roboshop-ansible/roles/mysql/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Install MySQL Server
   ansible.builtin.dnf:
-    name: mysql-sever
+    name: mysql-server
     state: latest
 
 - name: Start MySQL
