test-bash & systemd files

--- a/roboshop-ansible/roles/mysql/tasks/main.yml
+++ b/roboshop-ansible/roles/mysql/tasks/main.yml
@@ -6,7 +6,7 @@
 - name: Start MySQL
   ansible.builtin.systemd_service:
     name: mysqld
-    state: latest
+    state: started
     enabled: yes
 
 - name: Setup MySQL Root Password
