test-bash & systemd files

--- a/roboshop-ansible/roles/common/tasks/systemd_setup.yml
+++ b/roboshop-ansible/roles/common/tasks/systemd_setup.yml
@@ -5,7 +5,7 @@
 
 - name: Start Service
   ansible.systemd.service:
-    name: {{ app_name }}
+    name: "{{ app_name }}"
     state: restarted
     enabled: yes
     daemon-reload: yes
