--- a/roboshop-ansible/roles/shipping/tasks/main.yml
+++ b/roboshop-ansible/roles/shipping/tasks/main.yml
@@ -3,6 +3,21 @@
     name: common
     tasks_from: java
 
+- name: Install MySQL
+  ansible.builtin.dnf:
+    name: mysql
+    state: latest
+
+- name: Load Schema
+  ansible.builtin.shell: mysql -h mysql-dev.mydevops.shop -uroot -pRoboShop@1 < /app/db/schema.sql
+
+- name: Load app-user
+  ansible.builtin.shell: mysql -h mysql-dev.mydevops.shop -uroot -pRoboShop@1 < /app/db/app-user.sql
+
+- name: Load master-data
+  ansible.builtin.shell: mysql -h mysql-dev.mydevops.shop -uroot -pRoboShop@1 < /app/db/master-data.sql
+
+
 - name: Run systemd_setup
   ansible.builtin.include_role:
     name: common
