test-bash & systemd files

--- a/learn-ansible/04-conditions.yml
+++ b/learn-ansible/04-conditions.yml
@@ -6,5 +6,9 @@
   tasks:
     - name: Print Vegetable Name
       ansible.builtin.debug:
+        msg: Vegetable Names - Carrot
+
+    - name: Print Vegetable Name
+      ansible.builtin.debug:
         msg: Fruit Names - Orange
 
