test-bash & systemd files

--- a/learn-ansible/04-conditions.yml
+++ b/learn-ansible/04-conditions.yml
@@ -14,3 +14,7 @@
         msg: Fruit Names - Orange
       when: fruits == "yes"
 
+    - name: Print Vegetable Name -1
+      ansible.builtin.debug:
+        msg: Fruit Names - Orange
+      when: vegetables | bool
