test-bash & systemd files

--- a/learn-ansible/04-conditions.yml
+++ b/learn-ansible/04-conditions.yml
@@ -22,5 +22,5 @@
 
     - name: Number comparison
       ansible.builtin.debug:
-        msg: "{{ countx }}" is greater than 0
+        msg: "{{ countx }} is greater than 0"
       when: countx > 0
