test-bash & systemd files

--- a/learn-ansible/04-conditions.yml
+++ b/learn-ansible/04-conditions.yml
@@ -23,4 +23,5 @@
     - name: Number comparison
       ansible.builtin.debug:
         msg: "{{ countx }} is greater than 0"
-      when: countx > 0
+      when: countx | int > 0
+      # | int is making sure it is a number
