test-bash & systemd files

--- a/learn-ansible/07-facts.yml
+++ b/learn-ansible/07-facts.yml
@@ -5,3 +5,7 @@
     - name: Print Fact
       ansible.builtin.debug:
         msg: "{{ ansible_virtualization_type }}"
+
+    - name: Print IP
+      ansible.builtin.debug:
+        msg: "{{ ansible_default_ipv4 }}"
