test-bash & systemd files

--- a/learn-ansible/08-register.yml
+++ b/learn-ansible/08-register.yml
@@ -9,3 +9,7 @@
     - name: Print out
       ansible.builtin.debug:
         msg: "{{ out }}"
+
+    - name: Do not count this as a failure
+      ansible.builtin.command: /bin/false
+#      ignore_errors: true
