--- a/learn-ansible/11-hashi-vault.yml
+++ b/learn-ansible/11-hashi-vault.yml
@@ -4,4 +4,4 @@
   tasks:
     - name: Get secret KV
       ansible.builtin.debug:
-        msg: "{{ lookup('community.hashi_vault.vault_kv2_get', 'demo', url='https://vault:8201') }}"
+        msg: "{{ lookup('community.hashi_vault.hashi_vault', 'secret=demo/data/ssh:username token={{ token }} url=http://vault.mydevops.shop:8200') }}"
