--- a/learn-ansible/11-hashi-vault.yml
+++ b/learn-ansible/11-hashi-vault.yml
@@ -5,3 +5,7 @@
     - name: Get secret KV
       ansible.builtin.debug:
         msg: "{{ lookup('community.hashi_vault.hashi_vault', 'secret=demo/data/ssh:username token={{ token }} url=http://vault.mydevops.shop:8200') }}"
+
+    - name: Get secret KV1
+      ansible.builtin.debug:
+        msg: "{{ lookup('community.hashi_vault.hashi_vault', 'secret=demo/data/ssh:password token={{ token }} url=http://vault.mydevops.shop:8200') }}"
